# llm-grader

./: README.md  answer_example.txt  answers.txt  example.py  grader.py  main.py  pyproject.toml  read_data.py  requirements.txt  result.txt  result_pro.txt  zero_shot.py
dataset/: IF1210_01-Ujian Akhir Semester-grades.xlsx  IF1210_01-Ujian Akhir Semester-responses.xlsx  IF1210_SoalUAS_sem2_2021.docx
src/engine/: grading_client.py  grading_engine.py
src/prompts/: generator.py
